force-app/main/default/objects/vf_ProjectRole__c/vf_ProjectRole__c.object-meta.xml
<CustomObject>
    <label>Project Role</label>
    <pluralLabel>Project Roles</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Project Role</label>
        <displayFormat>PROJROLE-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object to connect projects with roles (many-to-many)</description>
</CustomObject>