force-app/main/default/objects/vf_ProjectRole__c/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Positions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Number of positions needed for this role</description>
    <inlineHelpText>The number of volunteer positions needed for this role in the project</inlineHelpText>
</CustomField>