force-app/main/default/objects/vf_ProjectRole__c/fields/Positions_Filled__c.field-meta.xml
<CustomField>
    <fullName>Positions_Filled__c</fullName>
    <label>Positions Filled</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Number of positions currently filled for this role</description>
    <inlineHelpText>The number of volunteer positions currently filled for this role</inlineHelpText>
</CustomField>