force-app/main/default/objects/vf_ProjectRole__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>vf_Project__c</referenceTo>
    <relationshipLabel>Project Roles</relationshipLabel>
    <relationshipName>ProjectRoles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <description>Project that requires this role</description>
    <inlineHelpText>The project that requires this role</inlineHelpText>
</CustomField>