force-app/main/default/objects/vf_ProjectRole__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <referenceTo>vf_Role__c</referenceTo>
    <relationshipLabel>Project Roles</relationshipLabel>
    <relationshipName>ProjectRoles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <description>Role required for this project</description>
    <inlineHelpText>The role required for this project</inlineHelpText>
</CustomField>